react wit mui clean

--- a/src/static/index.css
+++ b/src/static/index.css
@@ -3,96 +3,65 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
-#blk {
+#root {
   width: 800px;
-  min-height: 300px;
-  margin:4px;
-  /* border: 1px solid #000; */
+  min-height: 360px;
 }
-.navtext, dd{
-  font-size: 9pt;
+a:visited {
+  color: rgb(30, 135, 240);
 }
-.midnav {
-  margin-left:200px;
+header {
+  height:50px;
+  margin-top: -16px;
+  padding:0;
 }
-.uk-navbar {
-  height: 5px;
-  margin-top: -24px;
-  margin-bottom: 12px;
-  margin-left: 0px;
-  font-weight: bold;
-  border: 1px solid #f2f2f2;
-  z-index: 1;
+header a:visited {
+  color: rgb(255, 255, 255);
 }
-
- #blkIconBar {
-  margin-right: 6px;
-  margin-top: 4px;
+#root > div > div > div > div {
+  box-shadow : none;
+  /* padding-top: 14px; */
 }
-
-#blkIconBar > a {
-  background-color: -internal-light-dark(rgb(239, 239, 239), rgb(59, 59, 59));
-  background-color: #eee;
-  margin: 0em;
-  padding: 2px 6px;
-  border-radius: 4px; 
+#root > div > header > div > div > a {
+  text-transform: none;
+}
+#root > div > header > div > div > span > div > button {
+  padding: 1px;
+}
+#root > div > header > div > div > span > div > button > svg {
+  color: rgb(255 255 255);
+  font-size: 20px;
   border: 1px solid #999;
-  border-color: -internal-light-dark(rgb(118, 118, 118), rgb(133, 133, 133));
-  width: 15px;
-  height: 15px;
-  margin-right:1px;
+  border-radius: 4px; 
+  width: 34px;
+  margin-left: 0px;
 }
-#blkIconBar > a:nth-child(1) {
-  background-color: #fff;
-  margin-right: 12px;
-  border:none
+header.css-hip9hq-MuiPaper-root-MuiAppBar-root {
+  box-shadow : none;
 }
-#bookmarks {
-  /* border-top: 1px solid red; */
-  margin-top: 3.9em;
-  font-size: 14px;
+#root > div > div > div > div > div > div.MuiCardHeader-root {
+  padding: 6px;
 }
-.uk-card-header {
-  padding: 4px 4px;
-  font-size: 10pt;
-  /* border-top: 1px solid red; */
-  border-top: 1px solid #e5e5e5;
-}
-.uk-card-title {
-  font-size: 12px;
-  margin: 4px 1px;
+#root > div > div > div > div > div > div.MuiCardContent-root {
   text-align: left;
-  text-decoration: underline;
-  font-weight: 700;
+  padding: 6px;
 }
-.uk-card-body {
-  padding-top: 0px;
-  padding-bottom: 4px;
-  padding-left: 1px;
-  padding-right: 0px;
-  font-size: 8pt;
+.MuiCardHeader-title , .MuiCardHeader-content span {
+  border-bottom:  1px solid #e5e5e5;
+  text-decoration: none;
+  text-align: left;
+  font-size: 10pt;
+  font-weight: 600;
+}
+.MuiCardContent-root {
+  padding: 0;
 }
 .sitelinks {
-  margin-top: 4px;
-  margin-bottom: -4px;
-}
-.uk-grid {
-  margin-left: 0px;
-  margin-right: 12px;
-  margin-bottom: 12px;
-}
-.sitetitle {
-  color: red;
-}
-.sitetitle2 {
-  color: green;
-}
-.uk-dropdown {
-  background: #efe;
-  border: 1px solid black;
-  padding: 4px;
-  top: -8px;
-}
-.uk-card-header.ul-card {
-  padding: 4px;
+  margin-top: -6px;
+  margin-bottom: -6px;
+} 
+dt,dl,dd,dt a,dl a,dd a{
+  margin-inline-start: auto;
+  text-decoration: none;
+  font-size: 9pt;
 }
